# BestMLops

./: .pre-commit-config.yaml  pyproject.toml
.gradio/flagged/: dataset1.csv
src/bestmlops/: __init__.py  api.py
