[project]
name = "bestmlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NaidaNozic", email = "naida.nozic@reeinvent.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "gradio>=5.35.0",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]

[project.scripts]
bestmlops = "bestmlops:main"
local_deploy = "bestmlops.local_deploy:deploy_model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]
